--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-				<h1 id="logo"><a href="/">Twenty <span>by HTML5 UP</span></a></h1>
+				<h1 id="logo"><a href="/">Simply Sweet Surroundings <span>by CarolAnn</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="/">Welcome</a></li>
