--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,11 +12,9 @@
         <header>
             <h2>Simply Sweet Surroundings</h2>
         </header>
-        <p>This is a blog about my adventures in creating allergy free food and DIY obsessions
-        <br />
-        responsive template
-        <br />
-        by <a href="http://html5up.net">HTML5 UP</a>.</p>
+        <p>This is a blog about my adventures in 
+            <br /> creating allergy free food and DIY obsessions
+        </p>
         <footer>
             <ul class="buttons vertical">
                 <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
