--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -13,7 +13,7 @@
             <h2>Simply Sweet Surroundings</h2>
         </header>
         <p>This is a blog about my adventures in 
-            <br /> creating allergy free food and DIY obsessions
+            <br /> my DIY obsessions and creating allergy free recipes
         </p>
         <footer>
             <ul class="buttons vertical">
