--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,7 +10,7 @@
     <div class="inner">
 
         <header>
-            <h2>Simply Sweet Surroundings</h2>
+            <h2>Simply Sweet<br />Surroundings</h2>
         </header>
         <p>This is a blog about my adventures in 
             <br /> my DIY obsessions and creating allergy free recipes
