--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -13,7 +13,7 @@
             <h2>Simply Sweet<br />Surroundings</h2>
         </header>
         <p>This is a blog about my adventures in 
-            <br /> my DIY obsessions and creating allergy free recipes
+            <br />  DIY obsessions and creating allergy free recipes
         </p>
         <footer>
             <ul class="buttons vertical">
